# VLAIR

./: .clang-format  .clang-tidy  .gitignore  .markdownlint.json  .markdownlintignore  .pre-commit-config.yaml  AGENT-TYPES.MD  AGENTS.MD  CMakeLists.txt  README.md  SECURITY.md
.cursor/rules/: 00-index.mdc  01-production-workflow.mdc  02-coding-standards-cpp.mdc  03-ci-and-quality-gates.mdc  04-testing-and-benchmarks.mdc  05-security-and-safety.mdc  06-pr-and-commit-standards.mdc  07-docs-and-adr.mdc  08-python-and-orchestrator-standards.mdc
.github/: copilot-instructions.md
.github/instructions/: cpp.instructions.md  python.instructions.md
.github/workflows/: ci.yml
Docs/: Blueprint.md  DEVLOG.md  ImplementationPlan.md  Production-Task-List.md  TASKS.md  production-agentic-workflow.md
Docs/ADRs/: ADR-0001-sandbox-os-isolation.md  ADR-0002-sandbox-phase3-seccomp-token.md  ADR-XXXX-sandbox-phase3-seccomp-token.md  WAL-Orchestrator-Integration.md
Docs/Research/: Phase3-Seccomp-RestrictedTokenLaunch.md
P0/notes/: blueprint_index.md  implementation_alignment_report.md  vesper_capability_matrix.md
P1/notes/: filter_mapping_design.md  hybrid_search_surface.md  pybind_type_mapping.md
P2/notes/: agent_interfaces_registry_plan.md  agent_workflows_research.md  codegen_prompts.md
bench/context/: hybrid_search_bench.py  upsert_bench.py
bindings/python/pyvesper/: CMakeLists.txt  engine.cpp  engine.hpp  module.cpp  test_import.py
cli/: orchestrator_cli.py
exec/: sandbox.py
orchestrator/agents/: base.py  codegen.py  debug_agent.py  static_analysis.py  test_agent.py  test_gen.py
orchestrator/context/: context_store.py  idempotency.py  models.py  vesper_context_store.py
orchestrator/core/: dag.py  errors.py  orchestrator.py  registry.py  scheduler.py
orchestrator/obs/: redaction.py
orchestrator/schemas/: AgentError.schema.json  AgentResult.schema.json  AgentTask.schema.json  types.py  validators.py
orchestrator/wal/: __init__.py  events.py  replay.py  writer.py
prompts/: codegen.md  test_gen.md
scripts/: run_tests.py
tests/e2e/: feature_add_workflow_test.py
tests/integration/: e2e_dispatch_test.py  e2e_fix_loop_test.py  search_smoke_test.py
tests/unit/: agents_test.py  cli_redaction_flags_test.py  codegen_test.py  context_integration_test.py  context_store_test.py  context_structured_query_test.py  debug_agent_test.py  idempotency_test.py  mock_external_deps_test.py  models_test.py  orchestrator_analysis_artifact_test.py  orchestrator_failure_paths_test.py  orchestrator_queue_cli_examples_test.py  orchestrator_queue_test.py  orchestrator_rollback_test.py  orchestrator_router_test.py  orchestrator_status_test.py  orchestrator_validation_test.py  phase2_multi_artifact_flow_test.py  phase2_multi_artifact_negative_test.py  phase2_param_tests.py  phase2_workflow_test.py  redaction_extra_test.py  registry_test.py  sandbox_v2_test.py  scheduler_router_retry_budget_test.py  scheduler_test.py  schemas_test.py  testexec_redaction_timeout_test.py  testgen_test.py  vesper_context_store_mock_test.py  wal_replay_test.py  wal_stub_test.py
tools/: build_wheel.ps1
